Bug#40597 --ndb-shm server option doesn't set any server or status variables  - Remove --ndb-shm argument from all programs(it only had effect in   ndb_mgmd).  - Cleanup the programs that uses 'ndb_std_get_one_option' so they    don't use the same values as in the ndb_std_options enum.  - Define NDB_OPT_NO_SHORT to be used in all programs    that define an --argument that does not have a short form argument  - Remove all OPT_XXX defines that does not need special processing    and replace them with NDB_OPT_NO_SHORT   Remove the ndb_opt_defaults.h file which is now empty after    removing --ndb-shm