storage/ndb/tools/waiter.cpp
@@ -33,12 +33,6 @@
 static int
 waitClusterStatus(const char* _addr, ndb_mgm_node_status _status);
 
-enum ndb_waiter_options {
-  OPT_WAIT_STATUS_NOT_STARTED = NDB_STD_OPTIONS_LAST,
-  OPT_WAIT_STATUS_SINGLE_USER
-  ,OPT_NOWAIT_NODES
-};
-
 static int _no_contact = 0;
 static int _not_started = 0;
 static int _single_user = 0;
@@ -55,10 +49,10 @@ static struct my_option my_long_options[] =
   { "no-contact", 'n', "Wait for cluster no contact",
     (uchar**) &_no_contact, (uchar**) &_no_contact, 0,
     GET_BOOL, NO_ARG, 0, 0, 0, 0, 0, 0 }, 
-  { "not-started", OPT_WAIT_STATUS_NOT_STARTED, "Wait for cluster not started",
+  { "not-started", NDB_OPT_NOSHORT, "Wait for cluster not started",
     (uchar**) &_not_started, (uchar**) &_not_started, 0,
     GET_BOOL, NO_ARG, 0, 0, 0, 0, 0, 0 }, 
-  { "single-user", OPT_WAIT_STATUS_SINGLE_USER,
+  { "single-user", NDB_OPT_NOSHORT,
     "Wait for cluster to enter single user mode",
     (uchar**) &_single_user, (uchar**) &_single_user, 0,
     GET_BOOL, NO_ARG, 0, 0, 0, 0, 0, 0 }, 
@@ -68,7 +62,7 @@ static struct my_option my_long_options[] =
   { "wait-nodes", 'w', "Node ids to wait on, e.g. '1,2-4'",
     (uchar**) &_wait_nodes, (uchar**) &_wait_nodes, 0,
     GET_STR, REQUIRED_ARG, 0, 0, 0, 0, 0, 0 },
-  { "nowait-nodes", OPT_NOWAIT_NODES, 
+  { "nowait-nodes", NDB_OPT_NOSHORT,
     "Nodes that will not be waited for, e.g. '2,3,4-7'",
     (uchar**) &_nowait_nodes, (uchar**) &_nowait_nodes, 0,
     GET_STR, REQUIRED_ARG, 0, 0, 0, 0, 0, 0 },
